--- a/app/src/main/res/layout/intro.xml
+++ b/app/src/main/res/layout/intro.xml
@@ -48,7 +48,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
         android:backgroundTint="@color/colorPrimary"
-        android:onClick="btCadastrar"
+        android:onClick="btRegister"
         android:text="Cadastre-se"
         android:textColor="@android:color/white"
         android:textSize="18sp"
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:onClick="btEntrar"
+        android:onClick="btEnter"
         android:text="Já tenho conta"
         android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
