--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#106E5D</color>
-    <color name="colorPrimaryDark">#FF108E5D</color>
+    <color name="colorPrimaryDark">#E6E6E6</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
