--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -34,7 +34,7 @@
         fab:menu_animationDelayPerItem="50"
         fab:menu_backgroundColor="@android:color/transparent"
         fab:menu_buttonSpacing="0dp"
-        fab:menu_colorNormal="#DA4336"
+        fab:menu_colorNormal="@color/colorAccent"
         fab:menu_colorPressed="#E75043"
         fab:menu_colorRipple="#99FFFFFF"
         fab:menu_fab_size="normal"
@@ -64,7 +64,7 @@
         fab:menu_shadowXOffset="1dp"
         fab:menu_shadowYOffset="3dp"
         fab:menu_showShadow="true">
-
+        <!--
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/menu_item_createlist"
             android:onClick="createList"
@@ -73,7 +73,7 @@
             android:src="@drawable/ic_add_newlist_24dp"
             fab:fab_label="Criar lista de compras"
             fab:fab_size="mini" />
-
+        -->
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/menu_item_addlist"
             android:onClick="addList"
