--- a/app/src/main/res/layout/activity_add_list.xml
+++ b/app/src/main/res/layout/activity_add_list.xml
@@ -36,7 +36,7 @@
         android:layout_height="match_parent">
 
         <ListView
-            android:id="@+id/list"
+            android:id="@+id/listAdd"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="120dp" />
