--- a/app/src/main/res/layout/activity_add_list.xml
+++ b/app/src/main/res/layout/activity_add_list.xml
@@ -35,11 +35,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
-            android:id="@+id/listAdd"
+        <android.support.v7.widget.RecyclerView
+            android:layout_marginTop="120dp"
+            android:id="@+id/recycler_view_layour_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="120dp" />
+            tools:listitem="@layout/row_item_menu"/>
 
         <com.github.clans.fab.FloatingActionMenu
             android:id="@+id/menu"
