--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/loadingspinner"
+        android:background="@color/mi_text_color_primary_dark"
         />
 
 </android.support.constraint.ConstraintLayout>
